Added support for SDL_ttf and SDL_image. (These are conditionally compiled through ENABLE_SDL_TTF and ENABLE_SDL_IMAGE.)

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,10 +10,17 @@ ERLC = erlc
 ERLINC = ../include
 ERL_FLAGS = -I$(ERLINC) +inline +warn_unused_vars
 
+ifeq ($(ENABLE_SDL_TTF), yes)
+		SDL_TTF_MOD=sdl_ttf
+endif
+ifeq ($(ENABLE_SDL_IMAGE), yes)
+		SDL_IMAGE_MOD=sdl_img
+endif
+
 ErlMods		= \
 		sdl sdl_video sdl_events \
 		sdl_mouse sdl_joystick sdl_keyboard sdl_active sdl_audio \
-		gl glu sdl_util
+		gl glu sdl_util $(SDL_TTF_MOD) $(SDL_IMAGE_MOD) 
 
 ErlSrc		= $(ErlMods:%=%.erl)
 ErlTargets	= $(ErlMods:%=$(EBIN)/%.beam)
