Reuse opengl from wx in standard erlang distribution instead
Opengl is updated more often and the module gl[u].erl does not compete
with wx installation.

--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -68,7 +68,7 @@ GCC_O	= $(CC) -c $(CFLAGS) $<
 
 Helpers		= esdl_wrapper esdl_gen esdl_spec esdl_util \
 			esdl_video esdl_events esdl_audio \
-			esdl_gl esdl_glu esdl_glext \
+			esdl_gl \
 			$(SDL_TTF_HELPER) $(SDL_IMAGE_HELPER)
 
 HelpersObjects	= $(Helpers:%=%.o)
