Implement a native file dialog for Mac

--- a/c_src/Makefile.macosx
+++ b/c_src/Makefile.macosx
@@ -68,6 +68,9 @@ clean:
 esdl_driver.o :	esdl_driver.c
 	$(CC) -c -ObjC $(CFLAGS) $(ERLINC) $<
 
+esdl_video.o :	esdl_video.c
+	$(CC) -c -ObjC $(CFLAGS) $(ERLINC) $<
+
 ##
 ## sdl_driver.so
 
