temp win changes

--- a/rebar.config
+++ b/rebar.config
@@ -6,14 +6,14 @@
 
 {port_env, [
 	    {"linux", "CFLAGS", "$CFLAGS $SDL_CFLAGS"},
-	    {"linux", "LDFLAGS", "$LDFLAGS $SDL_LIBS"},
+	    {"linux", "LDFLAGS", "$LDFLAGS $SDL_LIBDIR"},
 
 	    {"darwin", "CFLAGS", "$CFLAGS -DDARWIN"},
 	    {"darwin", "LDFLAGS", "$LDFLAGS -framework OpenCL"},
 	    
-	    {"win32", "CFLAGS", "$CFLAGS -DWIN32 $OPENCL_INCDIR"},
+	    {"win32", "CFLAGS", "$CFLAGS -DWIN32 -D_WIN32 -D__WIN32__ $SDL_INCDIR"},
 	    {"win32", "DRV_CFLAGS", "/Zi /W3 $ERL_CFLAGS"},
-	    {"win32", "ERL_LDFLAGS", " /LIBPATH:$OPENCL_LIBDIR OpenCL.lib"}
+	    {"win32", "ERL_LDFLAGS", " /LIBPATH:$SDL_LIBDIR SDL.lib user32.lib"}
 	   ]}.
 
 {port_specs, [
