Remove Makefiles and configure scripts and minor fixes

--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
 	    
 	    {"win32", "CFLAGS", "$CFLAGS -DWIN32 -D_WIN32 -D__WIN32__ $SDL_INCDIR"},
 	    {"win32", "DRV_CFLAGS", "/Zi /W3 $ERL_CFLAGS"},
-	    {"win32", "ERL_LDFLAGS", " /LIBPATH:$SDL_LIBDIR SDL.lib user32.lib"}
+	    {"win32", "ERL_LDFLAGS", " /debug /LIBPATH:$SDL_LIBDIR SDL.lib user32.lib"}
 	   ]}.
 
 {port_specs, [
