Fix building on Mac OS X
The X11 headers are no longer in a "standard location", since
the X11 server is no longer provided directly by Apple.

--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
 	    {"linux", "CFLAGS", "$CFLAGS $SDL_CFLAGS"},
 	    {"linux", "LDFLAGS", "$LDFLAGS $SDL_LIBDIR"},
 
-	    {"darwin", "CFLAGS", "$CFLAGS -ObjC -D_OSX_COCOA"},
+	    {"darwin", "CFLAGS", "$CFLAGS -ObjC -D_OSX_COCOA -I/opt/X11/include"},
 	    {"darwin", "LDFLAGS", "$LDFLAGS -framework SDL"},
 	    
 	    {"win32", "CFLAGS", "$CFLAGS -DWIN32 -D_WIN32 -D__WIN32__ $SDL_INCDIR"},
