--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
 	    {"linux", "LDFLAGS", "$LDFLAGS $SDL_LIBDIR"},
 
 	    {"darwin", "CFLAGS", "$CFLAGS -ObjC -D_OSX_COCOA -I/opt/X11/include"},
-	    {"darwin", "LDFLAGS", "$LDFLAGS -framework SDL"},
+	    {"darwin", "LDFLAGS", "$LDFLAGS -framework SDL -rpath @executable_path/../Frameworks"},
 	    
 	    {"win32", "CFLAGS", "$CFLAGS -DWIN32 -D_WIN32 -D__WIN32__ $SDL_INCDIR"},
 	    {"win32", "DRV_CFLAGS", "/Zi /W3 $ERL_CFLAGS"},
